# fast-api

./: .dockerignore  .gitignore  README.md  api.env  config.json  docker-compose.yml  pyproject.toml
api/: backend.dev.dockerfile
api/src/: backend.dev.dockerfile  backend.dockerfile  frontend.dockerfile  main.py  pyproject.toml  rabbitworker.dockerfile  run_worker.py  worker.dockerfile
api/src/modules/auth/: auth_bearer.py  blacklist.py  crud_auth.py  dependency.py
api/src/modules/crud/: crud_bookings.py  crud_pages.py  crud_products.py  crud_users.py  jobs.py
api/src/modules/database/: base.py  db_session.py
api/src/modules/database/models/: blacklist.py  booking.py  enquiry.py  job_task.py  product.py  review.py  user.py  worker.py
api/src/modules/queue/: base.py  booking_queue.py
api/src/modules/routers/: auth.py  booking.py  job.py  pages.py  products.py  q_booking.py  users.py
api/src/modules/schemas/queue/: item.py  job_task.py
api/src/modules/schemas/requests/: auth.py  booking.py  enquiry.py  job.py  product.py  review.py  users.py
api/src/modules/schemas/responses/: auth.py  base_response.py  booking.py  enquiry.py  job.py  product.py  review.py  users.py
api/src/modules/schemas/worker/: worker.py
api/src/modules/settings/: config.py
api/src/modules/static/assets/: style.css
api/src/modules/templates/: base.html  news.html  sorted.html  verify_email.html
api/src/modules/utils/: base_functions.py  visa_api_client.py
api/src/modules/worker/: base.py  booking.py  worker.py  worker_base.py
api/src/resources/auth/: auth_bearer.py  blacklist.py
api/src/resources/database/: db_session.py
api/src/resources/database/models/: product.py  user.py
api/src/resources/frontend/: package-lock.json
api/src/resources/queue/: booking_queue.py
api/src/resources/routers/: booking.py  job.py  pages.py  products.py
api/src/resources/schemas/requests/: job.py  users.py
api/src/resources/schemas/responses/: base_response.py  job.py  product.py
api/src/resources/schemas/worker/: worker.py
api/src/resources/settings/: config.py
api/src/resources/static/assets/: style.css
api/src/resources/templates/: index.html  product.html
app/: Dockerfile.worker.dev
app/src/: backend.dockerfile  main.py  populate_mysql.py  pyproject.toml  rabbitworker.dockerfile  run_worker.py
app/src/resources/auth/: auth_bearer.py  crud_auth.py  dependency.py
app/src/resources/crud/: crud_bookings.py  crud_pages.py  crud_products.py  crud_users.py
app/src/resources/database/: db_session.py
app/src/resources/database/models/: blacklist.py  booking.py  job_task.py  product.py  worker.py
app/src/resources/queue/: base.py  booking_queue.py
app/src/resources/routers/: auth.py  booking.py  q_booking.py  users.py
app/src/resources/schemas/misc/: enums.py
app/src/resources/schemas/queue/: job_task.py
app/src/resources/schemas/requests/: auth.py  base_request.py  booking.py  product.py
app/src/resources/schemas/responses/: auth.py  booking.py  job.py
app/src/resources/settings/: config.py
app/src/resources/static/js/: scripts.js
app/src/resources/templates/: admin.html  base.html  index.html  login.html  order.html  product.html  sorted.html
app/src/resources/utils/: base_functions.py
app/src/resources/worker/: base.py  booking.py
data/: products.json  users.json
demo_db_input/: db_insert.sh
demo_db_input/data/: products.json  valid_user.json
deployment/: README.md  api_deployment.yml  db_deployment.yml  db_network.yml  db_volume.yaml  frontend_deployment.yml  tls.yaml  worker_deployment.yml
deployment/api/: api_deployment.yml  api_hpa.yml  api_network.yml
deployment/common/: adresspool.yml  deploy.sh  generic_secrets.sh  ingress.yml  kube.config  ns.yml  tls.yml  ui_secrets.env
deployment/common/openssl/: api.demo-elyte.test.crt  api.demo-elyte.test.csr  api.demo-elyte.test.key  backend.elyte.test+2-key.pem  backend.elyte.test+2.pem  cert.conf  cert.pem  csr.conf  demo-elyte.test+3-key.pem  demo-elyte.test+3.pem  demo-elyte.test.crt  demo-elyte.test.csr  demo-elyte.test.key  key.pem  rootCA.crt  rootCA.key  server.crt  server.csr  server.key  service.crt  service.csr  service.key  ssl.sh  tls.yml
deployment/db/: db_deployment.yml  db_network.yml  db_volume.yaml  db_volume.yml
deployment/openssl/: csr.conf  server.crt  server.key
deployment/queue/: definitions.json  job.yml  rabbit.yml  rabbit_cluster.yaml  rabbit_cluster.yml  rabbit_network.yml  rabbit_pvc.yml  rabbit_user.yml  worker_deployment.yml
deployment/ui/: frontend_deployment.yml  frontend_hpa.yml  frontend_network.yml  ui_deployment.yml  ui_network.yml  ui_secrets.env
deployment/worker/: worker.yml  worker_hpa.yml
vue-frontend/: package-lock.json  package.json
vue-frontend/public/: index.html  style.css
vue-frontend/src/: App.vue  main.js
vue-frontend/src/components/: BigIcons.vue  FooterContact.vue  Products.vue
vue-frontend/src/router/: index.js
vue-frontend/src/views/: AboutView.vue  HomeView.vue  LoginView.vue
vue_frontend/: frontend.dockerfile
vue_frontend/frontend/: env.sh  nginx.conf  package-lock.json  package.json
vue_frontend/frontend/public/: index.html  style.css
vue_frontend/frontend/src/: App.vue  main.js
vue_frontend/frontend/src/components/: EditUser.vue  Products.vue  UserProfile.vue
vue_frontend/frontend/src/helpers/: methodWrapper.js  script.js
vue_frontend/frontend/src/router/: index.js
vue_frontend/frontend/src/stores/: alert.js  auth_store.js  products.js  userAccount.js
vue_frontend/frontend/src/views/: HomeView.vue  LoginView.vue  UserView.vue
vuejs3/frontend/: nginx.conf  package-lock.json  package.json
vuejs3/frontend/public/: index.html  style.css
vuejs3/frontend/src/: App.vue  main.js
vuejs3/frontend/src/components/: Alert.vue  BigIcons.vue  EditUser.vue  ImageSlide.vue  LoginUser.vue  Nav.vue  Products.vue  RegisterUser.vue  UserProfile.vue
vuejs3/frontend/src/helpers/: methodWrapper.js  script.js
vuejs3/frontend/src/router/: index.js
vuejs3/frontend/src/stores/: auth_store.js  cart.js  (+2 more)
(+7 files in other folders)
