[tool.poetry]
authors = ["elyte5star <checkuti@gmail.com>"]
description = "e-Market"
homepage = "https://github.com/elyte5star/fastapi_docker"
license = "Proprietary"
name = "Elyte FastAPI Application."
packages = [{include = "fastapi_docker"}]
readme = "README.md"
repository = "https://github.com/elyte5star/fastapi_docker"
version = "0.1.0"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Proprietary",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[elyte.api.app]
description = """
   #   Interactive Documentation for Elyte e-Market
   """
name = "Elyte FastAPI Application."
version = "0.1.0"

[tool.poetry.dependencies]
Jinja2 = "3.1.2"
aio-pika = "^7.1.2"
aiofiles = "^0.8.0"
asyncmy = "0.2.7"
asyncpg = "^0.25.0"
authlib = "^1.0.1"
bcrypt = "^3.2.0"
email-validator = "^1.1.3"
fastapi = "^0.95.1"
httpx = "^0.23.0"
itsdangerous = "^2.1.2"
jwt = "^1.3.1"
motor = "^2.5.1"
mysqlclient = "2.1.1"
newsapi-python = "0.2.7"
numpy = "1.24.3"
pika = "^1.2.1"
pyconfs = "^0.5.5"
pydantic = "^1.9.0"
python = "^3.10"
python-dateutil = "2.8.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
requests = "^2.24.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.12"}
toml = "^0.10.2"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
zipstream = "^1.1.4"
[tool.poetry.dev-dependencies]
black = "21.9b0"
isort = "^5.10.1"
mypy = "^0.931"
pydocstyle = "^6.1.1"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
include = '\.pyi?$'
line-length = 79
[tool.isort]
float_to_top = true
force_single_line = false
include_trailing_comma = true
known_third_party = ["fastapi", "pydantic", "starlette"]
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
profile = "black"
use_parentheses = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.mypy]
plugins = [
  "pydantic.mypy",
]

[database]
db = "elyte"
host = "db"
port = 3306
pwd = "54321"
user = "userExample"

[queue.params]
host_name = "rabbitQ"
my_queue = ["SEARCH", "BOOKING", "LOST_ITEM"]
port = "5672"
pwd = "elyteRQ"

[api]
auth_type = ["SELF", "GOOGLE"]
debug = true
google_client_id = "864725361364-enrs63jgolid0jpmiffcsnj1rtadtss1.apps.googleusercontent.com"
host_url = "http://localhost:8000"
log_type = "INFO"
news_api_key = "8820ff85814d4e2ab94b0585d76eb209"

[admin]
email = "checkuti@gmail.com"
is_admin = true
password = "$2b$10$rQcvrrW2JcvjV2XM5TG3zeJd6oHPthld3VfRLsvyV2UJFO0.BxACO"
telephone = "40978057"
username = "elyte"

[hash.password]
coding = "utf-8"
length = 16
rounds = 10

[token.params]
algorithm = "HS256" 
grant_type = "refresh_token" 
refresh_token_expire_minutes = 43200 #30 days
secret_key = "0c2214c33cc65769166ec5248bb0ec6a15e892ba649e36fefc5732d9c1ba100" 
token_expire_min = 50 
token_url = "/token" 

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
